Fixed spacing issues with line profiles

--- a/src/Components/LineProfiles/PolyLineProfile/PolyLineProfile.module.css
+++ b/src/Components/LineProfiles/PolyLineProfile/PolyLineProfile.module.css
@@ -1,7 +1,9 @@
 .LineProfile {
     margin: auto;
     width: 95%;
-    margin-top: 8px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    /*margin-top: 8px;*/
     /*background-color: #e9ebf0;*/
     border-radius: 10px;
     /*display: inline-flex;*/
@@ -133,12 +135,3 @@
     margin-top: 10px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
-
-
-/*@keyframes fade-in {*/
-/*    0% { opacity: 0; transform: translate(-100px, 0px) scaleY(0.1)}*/
-/*    100% { opacity: 1; transform: translate(0px, 0px) scaleY(1)}*/
-/*}*/
-
-
-
