--- a/src/Components/LineProfiles/StraightLineProfile/StraightLineProfile.module.css
+++ b/src/Components/LineProfiles/StraightLineProfile/StraightLineProfile.module.css
@@ -1,7 +1,8 @@
 .LineProfile {
-    margin: 0.6vw;
+    margin: auto;
     width: 95%;
-    margin-top: 8px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     /*background-color: #e9ebf0;*/
     border-radius: 10px;
     display: inline-flex;
