--- a/src/Components/SideBar/Sidebar.module.css
+++ b/src/Components/SideBar/Sidebar.module.css
@@ -6,8 +6,12 @@
     box-shadow: 0 0 25px black inset;
 }
 
+.topSection {
+    height: 138px;
+}
+
 .profiles {
-    height: calc(100vh - 153px);
+    height: calc(100vh - 146px);
     position: relative;
     overflow-y: scroll;
 }
